<resources>
    <string name="app_name">Pathfinder feats</string>
    <string name="title_activity_main">All Feats</string>
    <string name="child_feats">Children feats</string>
    <string name="parent_feats">Parent feats</string>
    <string name="child_feats_title">Children feats of %s</string>
    <string name="parent_feats_title">Parent feats of %s</string>
    <string name="type_title"><![CDATA[<b>Type:</b> %s]]></string>
    <string name="prerequisites_title"><![CDATA[<b>Prerequisites:</b> %s]]></string>
    <string name="prerequisite_feats"><![CDATA[<b>Prerequisite Feats:</b> %s]]></string>
    <string name="benefit_title"><![CDATA[<b>Benefit:</b> %s]]></string>
    <string name="normal_title"><![CDATA[<b>Normal:</b> %s]]></string>
    <string name="special_title"><![CDATA[<b>Special:</b> %s]]></string>
    <string name="source_title"><![CDATA[<b>Source:</b> %s]]></string>
    <string name="teamwork">Teamwork</string>
    <string name="critical">Critical</string>
    <string name="grit">Grit</string>
    <string name="style">Style</string>
    <string name="performance">Performance</string>
    <string name="racial">Racial</string>
    <string name="panache">Panache</string>
    <string name="betrayal">Betrayal</string>
    <string name="targeting">Targeting</string>
    <string name="esoteric">Esoteric</string>
    <string name="stare">Stare</string>
    <string name="weapon_mastery">Weapon Mastery</string>
    <string name="item_mastery">Item Mastery</string>
    <string name="armor_mastery">Armor Mastery</string>
    <string name="shield_mastery">Shield Mastery</string>
    <string name="blood_hex">Blood Hex</string>
    <string name="trick">Trick</string>
    <string name="multiples">Multiples</string>
    <string name="companion_familiar">Companion Familiar</string>
    <string name="special_features_title"><![CDATA[<b>Special features: %s</b>]]></string>
    <string name="race_title"><![CDATA[<b>Race:</b> %s]]></string>
    <string name="note_title"><![CDATA[<b>Note:</b> %s]]></string>
    <string name="goal_title"><![CDATA[<b>Goal:</b> %s]]></string>
    <string name="complete_title"><![CDATA[<b>Completeon benefit:</b> %s]]></string>
    <string name="traits_title"><![CDATA[<b>Suggested traits:</b> %s]]></string>
    <string name="skills_title"><![CDATA[<b>Prerequisite skills:</b> %s]]></string>
    <string name="feat_type_title"><![CDATA[<b>Feat types:</b> %s]]></string>
    <string name="search_hint">Search feats</string>
    <string name="search">search</string>
    <string name="no_results">no such feats found</string>
    <string name="filter">Filter</string>
    <string name="title_activity_filters">Filters</string>
    <string name="source">Source</string>
    <string name="title_activity_filter_values">Select value</string>
    <string name="clear">clear</string>
    <string name="apply">apply</string>
    <string name="filtered_feats">Filter results</string>
    <string name="info">About</string>
    <string name="close">close</string>
    <string name="loading">unpacking database…</string>
    <string name="show_parent">show parent feats</string>
    <string name="show_children">show child feats</string>
</resources>
