<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/info"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:orderInCategory="200"
        android:title="@string/filter"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="300"
        android:title="@string/search"
        android:visible="true"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
</menu>