<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.syjgin.pathfinderfeats.activities.FeatDetailsActivity"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/featType"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prerequisites"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/childFeats"
                    android:textSize="14sp"
                    android:paddingBottom="10dp"
                    android:textColor="@android:color/black"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/showParent"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:text="@string/show_parent"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showChild"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/show_children"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/benefit"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/normal"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/special"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/source"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/specialFeatures"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:text="@string/teamwork"
                android:visibility="gone"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/race"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/note"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/goal"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/completeonBenefit"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/suggestedTraits"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skills"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
